@@ -163,6 +163,8 @@ jobs:
     - name: Build in-development version of Glimpse Image Editor
       run: |
         export INSTALL_PREFIX="`pwd`/glimpse-win-prefix"
+        export BUILD_DIR="`pwd`/Glimpse"
+        export DEP_DIR="`pwd`/InputFiles64"
         export PATH="$INSTALL_PREFIX/bin:$PATH"
         export PKG_CONFIG_PATH="$INSTALL_PREFIX/lib/pkgconfig:$INSTALL_PREFIX/share/pkgconfig:$PKG_CONFIG_PATH"
         export LD_LIBRARY_PATH="$INSTALL_PREFIX/lib:$LD_LIBRARY_PATH"
@@ -172,11 +174,24 @@ jobs:
         cd Glimpse
         ./autogen.sh --prefix=$INSTALL_PREFIX --disable-gtk-doc --disable-gtk-doc-html --without-webkit --without-xvfb-run --disable-python --disable-check-update
         make && make install
+        echo "== Copying dependency assets for build artifact =="
+        cp $BUILD_DIR/{AUTHORS,COPYING,LICENSE} $INSTALL_PREFIX/
+        cp $BUILD_DIR/build-aux/windows/fileicon.ico $INSTALL_PREFIX/bin/
+        echo "== Copying x64 MSYS2 dependency components =="
+        mkdir -p $DEP_DIR
+        cp -rf /c/msys64/mingw64/. $DEP_DIR/
+        mkdir -p $DEP_DIR/32/bin
+        cp $BUILD_DIR/build-aux/windows-msi/intl.dll $DEP_DIR/32/bin/
     
     - uses: actions/upload-artifact@v1
       with:
         name: glimpse-dev-x86_64-windows-${{ github.sha }}
         path: ${{ github.workspace }}/glimpse-win-prefix
+
+    - uses: actions/upload-artifact@v1
+      with:
+        name: glimpse-dev-x64-build-deps-${{ github.sha }}
+        path: ${{ github.workspace }}/InputFiles64
 
   build-windows-x86-dev:
     runs-on: windows-latest
@@ -197,18 +212,31 @@ jobs:
     - name: Build in-development version of Glimpse Image Editor
       run: |
         export INSTALL_PREFIX="`pwd`/glimpse-win-prefix"
+        export BUILD_DIR="`pwd`/Glimpse"
+        export DEP_DIR="`pwd`/InputFiles32"
         export PATH="$INSTALL_PREFIX/bin:$PATH"
         export PKG_CONFIG_PATH="$INSTALL_PREFIX/lib/pkgconfig:$INSTALL_PREFIX/share/pkgconfig:$PKG_CONFIG_PATH"
         export LD_LIBRARY_PATH="$INSTALL_PREFIX/lib:$LD_LIBRARY_PATH"
         export XDG_DATA_DIRS="$XDG_DATA_DIRS:$INSTALL_PREFIX/share:/usr/local/share/:/usr/share/"
-        export ACLOCAL_FLAGS="-I/c/msys64/mingw64/share/aclocal"
         echo "== Building Glimpse DEV... =="
-        cd Glimpse
+        cd $BUILD_DIR
         ./autogen.sh --prefix=$INSTALL_PREFIX --disable-gtk-doc --disable-gtk-doc-html --without-webkit --without-xvfb-run --disable-python --disable-check-update
         make && make install
+        echo "== Copying dependency assets for build artifact =="
+        cp $BUILD_DIR/{AUTHORS,COPYING,LICENSE} $INSTALL_PREFIX/
+        cp $BUILD_DIR/build-aux/windows/fileicon.ico $INSTALL_PREFIX/bin/
+        cp $BUILD_DIR/build-aux/windows-msi/intl.dll $INSTALL_PREFIX/bin/
+        echo "== Copying x86 MSYS2 dependency components =="
+        mkdir -p $DEP_DIR
+        cp -rf /c/msys64/mingw32/. $DEP_DIR/
     
     - uses: actions/upload-artifact@v1
       with:
         name: glimpse-dev-i686-windows-${{ github.sha }}
         path: ${{ github.workspace }}/glimpse-win-prefix
+
+    - uses: actions/upload-artifact@v1
+      with:
+        name: glimpse-dev-x86-build-deps-${{ github.sha }}
+        path: ${{ github.workspace }}/InputFiles32
     
